data/derived/sp14/progs/unify/prog4073.ml.out
Characters 39-40:
  let _ = eval (AddThree(VarX,VarY,VarX),1,2);;
                                         ^
Error: This expression has type int but an expression was expected of type
         float
